--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "bellows-app/plugin-statamic",
-    "description": "An intelligent command line utility that sits on top of Laravel Forge to get your site up and running with all of your third party integrations configured at the speed of light.",
+    "description": "Bellows plugin for creating a Statamic site.",
     "keywords": [
         "laravel",
         "console",
